# business_platform_backend

./: Dockerfile  README.md  alembic.ini  alembic_models.py  backup_20251020_121708.sql  bulk_create_mailboxes.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  env.example  init_db.py  nginx.conf  postgresql_main.py  pyproject.toml  run.py  setup-server.sh  simple_main.py  test_frontend_integration.py  test_mailbox.py
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 0b428ce1575e_add_is_archived_field_to_passwords.py  5bdf2a89362e_add_password_management_tables.py  add_invitations_and_company_owner.py  b6882894d2d0_initial_migration_sync_database_schema_.py  b972e156a182_merge_heads_0b428ce1575e_and_.py
app/: main.py
app/admin/: admin.py
app/api/v1/: api.py  dependencies.py
app/api/v1/endpoints/: academy.py  auth.py  companies.py  departments.py  employees.py  files.py  finances.py  invitations.py  knowledge.py  mailbox.py  news.py  passwords.py  tasks.py  test.py
app/core/: config.py  database.py
app/models/: __init__.py  database.py  invitation.py
app/schemas/: __init__.py  auth.py
app/services/: email_service.py  minio_service.py  redis_service.py
config/: server.conf
